Fix the button spacing

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.css-1p05t8e.epcbefy1 {
+.css-1xw8zd0.e10yg2by1 {
     border: 0px;
     padding: 0px;
 }
@@ -56,9 +56,14 @@ footer {
 	visibility: hidden;
 }
 
-.css-1vzt17l.e1tzin5v0 {
+.css-1mqvgu9.ef3psqc11 {
     text-align: center;
-    margin-top: 33px;
+    width: 100%;
+}
+
+.css-1mqvgu9.ef3psqc6 {
+    text-align: center;
+    width: 100%;
 }
 
 .css-4fbub3.e1tzin5v0 {
